# DPGSolver

./: .dir-locals.el  .gitignore  .gitignore.orig  .projectile  CMakeLists.txt  FAILING_TESTS.md  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile_testing  Optimization_Cases.txt  README.md  SETUP  SETUP.md  STYLE  STYLE.md  TODO  ToDoList.txt  all_build.sh  clean.sh  debug_build.sh  make_debug_builds.sh  make_default.sh  make_release_builds.sh  make_test_builds.sh  todo_reimplementation.md
input/: CMakeLists.txt
input/cubature/: CMakeLists.txt
input/cubature/pyr/: GJW2.txt  GL2.txt  GL4.txt  GL5.txt  GLL6.txt  GLLW1.txt  GLW0.txt  WV3.txt  WV7.txt  WVHToP5.txt  WVHToP7.txt  WVHToP8.txt
input/cubature/tet/: AO1.txt  AO11.txt  AO5.txt  AO7.txt  AO8.txt  WSH3.txt  WSH5.txt  WV3.txt  WV8.txt
input/cubature/tri/: AO1.txt  AO12.txt  AO14.txt  AO5.txt  AO7.txt  EQ7.txt  WSH3.txt  WSH6.txt  WV12.txt  WV18.txt  WV19.txt  WV7.txt  WV8.txt
input/meshes/: CMakeLists.txt  Makefile_meshes.in  compute_mesh_depend.py  generate_meshes_gmsh.py  geometry_parameters_P5_25x2_NACA0012.geo  parameters.geo
input/meshes/NURBS_Mesh_Generator/: Basis.py  ChannelWithBump.nurbs_patch  NURBS_Parametric_Domain_Generator.py  user_defined_patch.py
input/meshes/NURBS_Patch_Generator/: Airfoil Patch Plotter.ipynb  Airfoil_Patch.py  Basis.py  (+17 more)
input/nodes/: CMakeLists.txt
input/script_files/: default.sh  iso_vs_super_convergence.py  memcheck.sh  quick.sh  test.sh  test_all_memcheck.sh  test_all_quick.sh
input/testing/: CMakeLists.txt  curved_2d_mixed.msh  straight_2d_quad_periodic.msh
src/: ArrayFindIndex.c  ArrayFree.c  ArrayPrint.c  ArraySort.c  CMakeLists.txt  CMakeLists.txt.orig  DPGSolver.c  Element.c  Face.c  FindPeriodicConnections.c  FreeMemory.c  GmshReader.c  Initialization.c  Intrusive.c  Macros.h  Matrix.c  MemoryDestructors.c  MemoryFree.c  Mesh.c  Multiarray.c  S_ELEMENT.c  S_FACE.c  S_VOLUME.c  SetupConnectivity.c  SetupMesh.c  SetupParameters.c  SetupPeriodic.c  Simulation.c  Vector.c  Volume.c  \  adaptation.c  allocators.c  array_find_index.c  array_free.c  array_norm.c  array_print.c  array_sort.c  array_swap.c  bases.c  (+216 more)
src/allocators/: CMakeLists.txt  allocators.c  allocators.h
src/constants/: constants_alloc.h  constants_bc.h  constants_core.h  constants_elements.h  constants_intrusive.h  constants_mesh.h  constants_tol.h
src/containers/: CMakeLists.txt  def_templates_matrix.h  def_templates_matrix_constructors.h  def_templates_matrix_constructors_d.h  def_templates_matrix_constructors_i.h  def_templates_matrix_d.h  def_templates_matrix_i.h  def_templates_matrix_math.h  def_templates_matrix_math_d.h  def_templates_matrix_print.h  def_templates_matrix_print_d.h  def_templates_matrix_print_i.h  def_templates_multiarray.h  def_templates_multiarray_constructors.h  def_templates_multiarray_constructors_d.h  def_templates_multiarray_constructors_i.h  def_templates_multiarray_d.h  def_templates_multiarray_i.h  def_templates_multiarray_math.h  def_templates_multiarray_math_d.h  def_templates_multiarray_print.h  def_templates_multiarray_print_d.h  def_templates_multiarray_print_i.h  def_templates_vector.h  def_templates_vector_constructors.h  def_templates_vector_constructors_d.h  def_templates_vector_constructors_i.h  def_templates_vector_d.h  def_templates_vector_i.h  def_templates_vector_math.h  def_templates_vector_math_d.h  def_templates_vector_print.h  def_templates_vector_print_d.h  def_templates_vector_print_i.h  matrix.c  matrix.cpp  matrix.h  matrix_T.c  matrix_T.cpp  matrix_T.h  (+81 more)
src/data_processing/: output_convergence_orders.c
src/definitions/: definitions_alloc.h  definitions_bases.h  definitions_bc.h  definitions_core.h  definitions_cubature.h  definitions_dpg.h  definitions_element_operators.h  definitions_elements.h  definitions_h_ref.h  definitions_intrusive.h  definitions_math.h  definitions_mesh.h  definitions_mkl.h  definitions_nodes.h  definitions_slepc.h  definitions_test_case.h  definitions_tol.h  definitions_visualization.h
src/element/: CMakeLists.txt  bases.c  bases.cpp  bases.h  definitions_element_operators.h  definitions_elements.h  definitions_nodes.h  element.c  element.h  element_operators.c  element_operators.cpp  element_operators.h  element_operators_tp.c  element_operators_tp.cpp  nodes.c  nodes.h  nodes_correspondence.c  nodes_correspondence.h  nodes_operators.c  nodes_operators.cpp  nodes_operators.h  nodes_plotting.c  nodes_plotting.h
src/general/: CMakeLists.txt  const_cast.c  const_cast.cpp  const_cast.h  const_cast_T.c  const_cast_T.h  def_templates_const_cast_b.h  def_templates_const_cast_c.h  def_templates_const_cast_d.h  def_templates_const_cast_i.h  def_templates_const_cast_p.h  def_templates_math_d.h  def_templates_math_functions.h  def_templates_math_functions_d.h  definitions_math.h  file_processing.c  file_processing.cpp  file_processing.h  file_processing_conversions.c  file_processing_conversions.h  math_functions.c  math_functions.cpp  math_functions.h  math_functions_T.c  math_functions_T.cpp  math_functions_T.h  templates_const_cast_b.h  templates_const_cast_c.h  templates_const_cast_d.h  templates_const_cast_i.h  templates_const_cast_p.h  templates_math_d.h  undef_templates_const_cast.h  undef_templates_math.h  undef_templates_math_functions.h
src/intrusive/: CMakeLists.txt  intrusive.c  intrusive.cpp  intrusive.h
src/processing/: CMakeLists.txt
src/simulation/: CMakeLists.txt  definitions_simulation.h  element.c  element.h  face.c  face.h  simulation.c  simulation.cpp  simulation.h  solver_volume.c  solver_volume.h  volume.c  volume.h
src/support_functions/: output_mm_CTN_d.c
src/templates/: def_templates_type_b.h  def_templates_type_c.h  def_templates_type_d.h  def_templates_type_dc.h  def_templates_type_i.h  def_templates_type_p.h  definitions_templates_type.h  templates_type_b.h  templates_type_c.h  templates_type_d.h  templates_type_i.h  templates_type_p.h  undef_templates_type.h
src/testing/: CMakeLists.txt  main_test.c  main_test_all.c  test_base.c  test_base.cpp  test_base.h  test_info.h
(+3013 files in other folders)
